# sql-debugger-env

./: Dockerfile  README.md  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_env.py
env/: __init__.py  environment.py  models.py  tasks.py
envs/sql_env/: __init__.py  client.py  models.py
envs/sql_env/server/: app.py  sql_environment.py
server/: app.py
