[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-debugger-env"
version = "1.0.0"
description = "OpenEnv environment for SQL query debugging"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "requests",
    "openenv>=0.1.0",
]

[project.scripts]
server = "server.app:main"